# devops-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: allowlist.json  ssh_permissions.json
docs/: BIOTACT_ANALYTICS_PLAN.md  IMPLEMENTATION_PLAN.md  SESSION_HANDOFF.md  SSH_REFACTORING_PLAN.md  TODO_ANALYTICS.md
docs/standards/: DEVOPS_GUIDE.md  EXPRESS_GUIDE.md  FASTAPI_GUIDE.md  POSTGRESQL_GUIDE.md  PYTHON_STYLE_GUIDE_V2.md  RAG_SYSTEM_GUIDE.md  REACT_STYLE_GUIDE.md  TELEGRAM_BOT_GUIDE.md  TELEGRAM_MINIAPP_GUIDE.md  TYPESCRIPT_STYLE_GUIDE.md
src/: agent.py  bot.py  config.py  main.py  security.py  ssh_manager.py  state.py  tools.py
tests/: test_agent.py  test_bot.py  test_config.py  test_security.py  test_ssh_manager.py  test_state.py  test_tools.py
