[project]
name = "devops-agent"
version = "0.1.0"
description = "DevOps Telegram Agent with Claude AI"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.24",
    "anthropic>=0.76",
    "pydantic>=2.12",
    "pydantic-settings>=2.12",
    "aiosqlite>=0.22",
    "structlog>=25.5",
    "asyncssh>=2.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-cov>=7.0",
    "ruff>=0.14",
    "mypy>=1.19",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM", "TCH", "PTH", "RUF"]
ignore = ["RUF001"]  # Allow Cyrillic characters in strings

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
